Fixed DoubleFormTest, removed deprecated constructs